Bug 463737 - Haruna 0.10.0 crash on launch
Summary: Haruna 0.10.0 crash on launch
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 0.10.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-02 16:19 UTC by marav
Modified: 2023-01-06 11:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
krash report (4.15 KB, text/x-log)
2023-01-02 18:32 UTC, marav
Details

Note You need to log in before you can comment on or make changes to this bug.
Description marav 2023-01-02 16:19:06 UTC
terminate called after throwing an instance of 'std::bad_alloc'
  what():  std::bad_alloc
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = haruna path = /usr/bin pid = 18533
KCrash: Arguments: /usr/bin/haruna Sans.titre.mkv 
KCrash: Attempting to start /usr/lib64/libexec/drkonqi


STEPS TO REPRODUCE
1. compile haruna 0.10.0
2. CLI : haruna video.mkv


SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  5.26.4
KDE Plasma Version: 
KDE Frameworks Version: 5.101 
Qt Version:  5.15.7
Comment 1 george fb 2023-01-02 16:33:08 UTC
Clear your cache. Also relative paths are not supported.
Comment 2 marav 2023-01-02 16:42:20 UTC
Sorry, but I don't understand what "clear your cache" means
ditto for "relative path"

I build haruna since the first release, without any issue
But I don't know how to proceed with your advice
Comment 3 george fb 2023-01-02 16:47:37 UTC
(In reply to marav from comment #2)
> Sorry, but I don't understand what "clear your cache" means
Delete/rename `/home/username/.cache/KDE/haruna` and try again.
> ditto for "relative path"
https://linuxhandbook.com/absolute-vs-relative-path/
Comment 4 marav 2023-01-02 16:53:04 UTC
Thanks, cache cleared

Yes, I know what is absolute/relative path
But in this case, what you called "relative path" ?

note: I observed the same behavior after cleaning the cache and launching the video via Dolphin
Comment 5 george fb 2023-01-02 16:56:25 UTC
Are you on Arch?
Comment 6 marav 2023-01-02 16:57:33 UTC
(In reply to george fb from comment #5)
> Are you on Arch?

nope
Slackware
Comment 7 marav 2023-01-02 17:00:35 UTC
the return to 0.9.3 works without any issue
Comment 8 george fb 2023-01-02 17:32:38 UTC
Don't know, try the flatpak maybe. Else try to find which commit broke things with `git bisect`.
Comment 9 marav 2023-01-02 18:27:39 UTC
This is the last commit that works
https://invent.kde.org/multimedia/haruna/-/commit/6e576bf49480e972d9014c1bb0215af3a87f2ea2

The next one fails
https://invent.kde.org/multimedia/haruna/-/commit/d3badf5fb210b94ff22da396d961e24f801e99f2

Same error:
terminate called after throwing an instance of 'std::bad_alloc'
  what():  std::bad_alloc
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = haruna path = /usr/bin pid = 5882
KCrash: Arguments: /usr/bin/haruna /home/marav/Vidéos/Sans.titre.mkv
Comment 10 marav 2023-01-02 18:32:59 UTC
Created attachment 154967 [details]
krash report

Attch. crash report
Comment 11 marav 2023-01-02 18:36:26 UTC
hope this helps
Comment 12 marav 2023-01-03 09:54:31 UTC
Hi George

haruna 0.10.0 is running fine on Slackware Stable 15.0
As I use the development version (current), there are many differences
especially:
15.0:
- glibc 2.33
- glib2 2.70.3

current:
- glibc 2.36
- glib2 2.74.4

Today, the error looks like this:

malloc(): invalid size (unsorted)
[1]    13264 alarm      haruna /home/marav/Vidéos/Sans.titre.mkv
Comment 13 george fb 2023-01-03 11:11:47 UTC
Don't know, it doesn't look like a Haruna issue.

Do other qml apps (Elisa, NeoChat) work?
Comment 14 marav 2023-01-03 11:41:39 UTC
(In reply to george fb from comment #13)
> Don't know, it doesn't look like a Haruna issue.
> 
It seems, indeed

> Do other qml apps (Elisa, NeoChat) work?
Yep, Elisa works fine

As long as it works on Stable, it's ok for me (I maintain the pkg build only for stable anyway)
There are probably too many factors to review to find the culprit

Thanks for your support !
Comment 15 p d 2023-01-06 07:16:29 UTC
This problem happens when opening a video with "Maximum recent files" in Haruna set to "0". When it's set to 0, and I try to play a video, Haruna crashes. When it's set to 1 or above, it works fine.
Comment 16 marav 2023-01-06 07:32:59 UTC
(In reply to p d from comment #15)
> This problem happens when opening a video with "Maximum recent files" in
> Haruna set to "0". When it's set to 0, and I try to play a video, Haruna
> crashes. When it's set to 1 or above, it works fine.

Awesome!
That also explains why Youtube Video was working

Thank you very much!
Comment 17 george fb 2023-01-06 11:46:47 UTC
Git commit 928c81d326ec2b9529e183cc1816484252703357 by George Florea Bănuș.
Committed on 06/01/2023 at 11:46.
Pushed by georgefb into branch 'master'.

recentfilesmodel: don't try to add files if option was disabled (MaxRecentFiles = 0)

M  +4    -0    src/models/recentfilesmodel.cpp

https://invent.kde.org/multimedia/haruna/commit/928c81d326ec2b9529e183cc1816484252703357