recentfilesmodel: don't try to add files if option was disabled (MaxRecentFiles = 0)

BUG: 463737